@@ -35,7 +35,7 @@ module Padrino
       component_option :mock,       "mocking library",    :aliases => '-m', :choices => [:mocha, :rr], :default => :none
       component_option :script,     "javascript library", :aliases => '-s', :choices => [:jquery, :prototype, :rightjs, :mootools, :extcore, :dojo], :default => :none
       component_option :renderer,   "template engine",    :aliases => '-e', :choices => [:haml, :erb, :erubis], :default => :haml
-      component_option :stylesheet, "stylesheet engine",  :aliases => '-c', :choices => [:less, :sass, :compass], :default => :none
+      component_option :stylesheet, "stylesheet engine",  :aliases => '-c', :choices => [:less, :sass, :compass, :scss], :default => :none
 
       # Show help if no argv given
       require_arguments!
